compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import one as x\n        import two as x\n        "
---
----- SOURCE CODE

        import one as x
        import two as x
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import one as x
  │         ^^^^^^^^^^^^^^^ First imported here
3 │         import two as x
  │         ^^^^^^^^^^^^^^^ Reimported here

`x` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
